加入了listview来显示游记，设置点击事件，长按删除事件，缺点是不能即时刷新，修改添加游记页面的BUG。

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,6 +36,9 @@
         <activity 
             android:name="com.mix.activity.AdActivity">            
         </activity>
+        <activity 
+            android:name="com.mix.activity.DiaryContentActivity">            
+        </activity>
     </application>
 
 </manifest>
